<resources>
    <string name="app_name" translatable="false">Notelo</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create account</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="email_cant_be_empty">The email can\'t be empty!</string>
    <string name="email_is_invalid">The email is invalid!</string>
    <string name="password_cant_be_empty">Password can\'t be empty!</string>
    <string name="password_is_too_short">The password is too short!</string>
    <string name="passwords_dont_match">Passwords don\'t match!</string>
    <string name="processing">Processing</string>
    <string name="error_creating_account">Error creating account</string>
    <string name="you_have_successfully_registered">You have successfully registered!</string>
    <string name="data_recording_error">Data recording error</string>
    <string name="check_your_email_to_confirm_your_account">Check your email to confirm your account!</string>
    <string name="login_error">Login error</string>
    <string name="notes">Notes</string>
    <string name="recipes">Recipes</string>
    <string name="prayers">Prayers</string>
    <string name="note_title">Note\'s title</string>
    <string name="note_content">Note\'s content</string>
    <string name="you_dont_have_any_notes">You don\'t have any notes</string>
    <string name="add">Add</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="go_back_to_login">Go back to <b>login</b></string>
    <string name="check_your_email_to_reset_your_password">Check your email to reset your password</string>
    <string name="something_went_wrong_please_try_again">Something went wrong, please try again</string>
    <string name="recover_your_account">Recover your account</string>
    <string name="collection">Collection</string>
    <string name="discover">Discover</string>
    <string name="message">Message</string>
    <string name="collections">Collections</string>
    <string name="collection_name">Collection name</string>
    <string name="categories">Categories</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_name">Category name</string>
    <string name="untagged">Untagged</string>
    <string name="all_notes">All notes</string>
    <string name="tag">Tag</string>
    <string name="edit">Edit</string>
    <string name="uncategorized">Uncategorized</string>
    <string name="edited_date">Edited %1$s</string>
    <string name="category">Category</string>
    <string name="tags">Tags</string>
    <string name="visibility">Visibility</string>
    <string name="detele_note">Delete note</string>
    <string name="save_changes">Save changes</string>
    <string name="private_note">Private note</string>
    <string name="public_note">Public note</string>
    <string name="done">Done</string>
    <string name="properties">Properties</string>
    <string name="save">Save</string>
    <string name="note_updated_successfully">Note updated successfully!</string>
    <string name="select_tags">Select tags</string>
    <string name="note_deleted_successfully">Note deleted successfully!</string>
    <string name="you_don_t_have_any_notes_in_this_category">You don\'t have any notes in this category</string>
    <string name="action">Action</string>
    <string name="create_category">Create category</string>
    <string name="private_category">Private category</string>
    <string name="public_category">Public category</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="category_created_successfully">Category created successfully!</string>
    <string name="_private">Private</string>
    <string name="_public">Public</string>
    <string name="pick_a_color">Pick a color</string>
    <string name="confirm">Confirm</string>
    <string name="category_name_is_too_short">Category name is too short</string>
    <string name="category_updated_successfully">Category updated successfully!</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="note_title_cant_be_empty">Note title can\'t be empty</string>
    <string name="note_content_cant_be_empty">Note content can\'t be empty</string>
    <string name="note_created_successfully">Note created successfully</string>
    <string name="title_is_too_short">Title is too short</string>
    <string name="search_through_your_notes">Search through your notes</string>
    <string name="couldn_t_find_any_notes_that_contain_the_searched_term">Couldn\'t find any notes that contain the searched term</string>
    <string name="create_note">Create note</string>
    <string name="article_title">Article\'s title</string>
    <string name="article_description">Article\'s description</string>
    <string name="article_content">Article\'s content</string>
    <string name="author">Author</string>
    <string name="publication_date">Publication date</string>
    <string name="read_the_whole_article">Read the whole article</string>
    <string name="save_article_as_note">Save article as note</string>
    <string name="notelo">Notelo</string>
    <string name="user_not_found">User not found</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="user_already_exists">User already exists</string>
    <string name="data_fetching_error">Data fetching error</string>
    <string name="could_not_get_the_user_id">Could not get the user ID</string>
    <string name="user_data_not_found">User data not found</string>
    <string name="could_not_get_the_categories">Could not get the categories</string>
    <string name="could_not_get_the_tags_for_this_category">Could not get tags for this category</string>
    <string name="could_not_update_the_note">Could not update the note</string>
    <string name="could_not_delete_the_note">Could not delete note</string>
    <string name="could_not_create_the_category">Could not create the category</string>
    <string name="could_not_update_the_category">Could not update the category</string>
    <string name="could_not_delete_the_category">Could not delete the category</string>
    <string name="the_password_must_be_at_least_x_characters_long">The password must be at least %1$d characters long</string>
    <string name="could_not_get_the_notes_because_the_user_id_is_null">Could not get the notes because the user ID is null</string>
    <string name="could_not_get_the_notes">Could not get the notes</string>
    <string name="could_not_sign_out">Could not sign out</string>
    <string name="content">Content</string>
    <string name="current_user_is_null">Current user is null</string>
    <string name="could_not_get_the_categories_because_the_user_id_is_null">Could not get the categories because the user ID is null</string>
    <string name="could_not_get_the_tags_because_the_category_id_is_null">Could not get the tags because the category ID is null</string>
    <string name="could_not_update_the_note_because_the_note_id_is_null">Could not update the note because the note ID is null</string>
    <string name="could_not_delete_the_note_because_the_note_id_is_null">Could not delete the note because the note ID is null</string>
    <string name="could_not_create_a_new_category_because_the_user_id_is_null">Could not create a new category because the user ID is null</string>
    <string name="could_not_update_the_category_because_the_category_id_is_null">Could not update the category because the category ID is null</string>
    <string name="could_not_delete_the_category_because_the_category_id_is_null">Could not delete the category because the category ID is null</string>
    <string name="category_name_can_not_be_empty">Category name can not be empty</string>
    <string name="category_name_must_be_between_x_and_y_characters">Category name must be between %d and %d characters</string>
    <string name="could_not_create_a_new_note_because_the_user_id_is_null">Could not create a new note because the user ID is null</string>
    <string name="note_title_must_be_between_x_and_y_characters">Note title must be between %d and %d characters</string>
    <string name="note_content_must_be_between_x_and_y_characters">Note content must be between %d and %d characters</string>
    <string name="could_not_get_this_category_notes">Could not get this category notes</string>
    <string name="could_not_get_this_category_tags">Could not get this category tags</string>
    <string name="could_not_get_this_category_notes_because_the_category_id_is_null">Could not get this category notes because the category ID is null</string>
    <string name="could_not_get_this_category_tags_because_the_category_id_is_null">Could not get this category tags because the category ID is null</string>
    <string name="could_not_publish_the_note_because_the_user_id_is_null">Could not publish the note because the user ID is null</string>
    <string name="could_not_create_the_note">Could not create the note</string>
    <string name="could_not_back_up_the_note_because_the_user_id_is_null">Could not back up the note because the user ID is null</string>
    <string name="could_not_back_up_the_note">Could not back up the note</string>
    <string name="could_not_update_the_note_because_the_note_is_null">Could not update the note because the note is null</string>
    <string name="could_not_delete_the_note_because_the_note_is_null">Could not delete the note because the note is null</string>
    <string name="could_not_delete_backed_up_note">Could not delete backed up note</string>
    <string name="could_not_update_backed_up_note">Could not update backed up note</string>
    <string name="could_not_update_the_category_because_the_category_is_null">Could not update the category because the category is null</string>
    <string name="could_not_delete_the_category_because_the_category_is_null">Could not delete the category because the category is null</string>
    <string name="category_deleted_successfully">Category deleted successfully</string>
    <string name="could_not_change_the_note_visibility">Could not change the note visibility</string>
    <string name="manage_tags">Manage tags</string>
    <string name="tag_name">Tag name</string>
    <string name="close">Close</string>
    <string name="could_not_get_the_tags_because_the_category_is_null">Could not get the tags because the category is null</string>
    <string name="tag_name_must_be_between_x_and_y_characters">Tag name must be between %d and %d characters</string>
    <string name="tag_name_can_not_be_empty">Tag name can not be empty</string>
    <string name="could_not_create_the_tag">Could not create the tag</string>
    <string name="could_not_delete_the_tag">Could not delete the tag</string>
    <string name="tag_deleted_successfully">Tag deleted successfully</string>
    <string name="could_not_update_the_tag">Could not update the tag</string>
    <string name="could_not_update_the_tags">Could not update the tags</string>
    <string name="could_not_obtain_this_category_tags_with_notes">Could not obtain this category tags with notes</string>
    <string name="could_not_obtain_the_tags_and_notes_of_a_null_category">Could not obtain the tags and notes of a null category</string>
    <string name="could_not_get_this_category_content">Could not get this category content</string>
</resources>