<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_rounded"
    android:backgroundTint="@color/background"
    android:paddingLeft="@dimen/padding_container"
    android:paddingRight="@dimen/padding_container"
    android:paddingBottom="@dimen/padding_container">

    <ImageView
        android:id="@+id/imageViewPill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_pill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text" />

    <!-- category -->
    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_element"
        android:text="@string/category"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imageViewPill" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_element"
        app:layout_constraintTop_toBottomOf="@id/textViewCategory" />

    <!-- tags -->
    <TextView
        android:id="@+id/textViewTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_element"
        android:text="@string/tags"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/spinnerCategory" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSelectTags"
        style="@style/ButtonAltStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_element"
        android:gravity="start"
        android:text="@string/select_tags"
        android:textAllCaps="false"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@id/textViewTags" />

    <!-- visibility -->
    <TextView
        android:id="@+id/textViewVisibility"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_element"
        android:text="@string/visibility"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/buttonSelectTags" />

    <RadioGroup
        android:id="@+id/radioGroupVisibility"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_element"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/textViewVisibility">

        <!-- private -->
        <RadioButton
            android:id="@+id/radioButtonPrivate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/private_note" />

        <!-- public -->
        <RadioButton
            android:id="@+id/radioButtonPublic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_element"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/public_note" />

    </RadioGroup>

    <!-- save button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_separator"
        android:text="@string/save"
        app:layout_constraintEnd_toStartOf="@+id/buttonDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupVisibility" />

    <!-- delete button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDelete"
        style="@style/ButtonAltStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_element"
        android:layout_marginTop="@dimen/margin_separator"
        android:text="@string/detele_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSave"
        app:layout_constraintTop_toBottomOf="@id/radioGroupVisibility" />

</androidx.constraintlayout.widget.ConstraintLayout>